--- a/redWineAnalysis.Rmd
+++ b/redWineAnalysis.Rmd
@@ -634,7 +634,7 @@ and Summary section.
 ### Plot 1
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE} 
-ggplot(data=wine, aes(y=alcohol, x=quality)) + geom_jitter(alpha = .3) + geom_boxplot(alpha = .5,color = 'blue') + stat_summary(fun.y = "mean", geom = "point", color = "red", shape = 8, size = 4) + xlab("Quality") + ggtitle("Influence of alcohol on wine quality")
+ggplot(data=wine, aes(y=alcohol, x=quality)) + geom_jitter(alpha = .3) + geom_boxplot(alpha = .5,color = 'blue') + stat_summary(fun.y = "mean", geom = "point", color = "red", shape = 8, size = 4) + ylab("Alcohol (% by volume)") + xlab("Quality") + ggtitle("Influence of alcohol on wine quality")
 
 ```
 
